# aiurgaze

./: Cargo.toml  build.rs  config.toml
config/: entities.toml
data/: entities.toml
docker/: Dockerfile  healthcheck-sc2.sh  run-sc2.sh
protos/: sc2proxy.proto
scripts/: data-json-to-entities.py  gen_entities.py
src/: app_settings.rs  bot_runner.rs  build.rs  connection.rs  controller.rs  create_game_request.rs  entity_system.rs  main.rs  map.rs  net_helpers.rs  proxy.rs  proxy_ws.rs  render.rs  ui.rs  units.rs
src/ui/: game_config_panel.rs  setup_game_config_panel.rs
