[package]
name = "sc2view"
version = "0.1.0"
edition = "2021"


[dependencies]
# --- Runtime / async / gRPC ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
#tonic = { version = "0.12", features = ["gzip"] }
#prost = "0.13"
prost-types = "0.14.1"
bytes = "1"
log = "0.4"

# --- Rendering / UI ---
bevy = { version = "0.16.1", features = ["default", "webp"]}
bevy_egui = "0.36.0"
bevy-tokio-tasks = "*"
bevy_ecs_tilemap = "*"
bevy_sprite = "0.16.1"
tiled = { version = "0.14.0", default-features = false }

tap = "*"
sc2-proto = "*"

#-- ecs tiled map
serde_json = "*"
ldtk_rust ="*"

# --- Concurrency / Utils ---
crossbeam-channel = "0.5"
thiserror = "1"
tonic-build = "0.14.2"

#[build-dependencies]
#tonic-build = "0.12"
#prost-build = "0.13"

tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
http = "1.3.1"
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
url = "2.5.7"

protobuf = "^2.17.0"
futures-util = "0.3.31"

[build-dependencies]
tonic-prost-build = "0.14.2"
tiled = { version = "0.14.0", default-features = false }


[features]
# Build with `--features use-wasm-view` if ever embedding to a webview later
use-wasm-view = []