[package]
name = "sc2view"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Runtime / async / gRPC ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
bytes = "1"
log = "0.4"

# --- Rendering / UI ---
bevy = { version = "0.16.1", features = ["default", "webp"]}
bevy_egui = "0.36.0"
bevy-tokio-tasks = "*"
bevy_ecs_tilemap = "*"
bevy_sprite = "0.16.1"
tiled = { version = "0.14.0", default-features = false }

tap = "*"
sc2-proto = "*"

#-- ecs tiled map
serde_json = "*"
ldtk_rust ="*"

# --- Concurrency / Utils ---
thiserror = "2.0.17"
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"

protobuf = "^2.17.0"
futures-util = "0.3.31"
serde = "1.0.228"
url = "2.5.7"

[build-dependencies]
tiled = { version = "0.14.0", default-features = false }


[features]
# Build with `--features use-wasm-view` if ever embedding to a webview later
use-wasm-view = []
