[package]
name = "sc2view"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Runtime / async / gRPC ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
bytes = "1"
log = "0.4"

# --- Rendering / UI ---
bevy = { version = "0.16.1", features = ["default", "webp"]}
bevy_egui = "0.36.0"
bevy-tokio-tasks = "*"
bevy_ecs_tilemap = "*"
bevy_sprite = "0.16.1"
bevy_health_bar3d = { git = "https://github.com/kubivan/bevy_health_bar" }
tiled = { version = "0.14.0", default-features = false }

tap = "*"
sc2-proto = "*"

#-- ecs tiled map
serde_json = "*"
ldtk_rust ="*"

# --- Concurrency / Utils ---
thiserror = "2.0.17"
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"

protobuf = "^2.17.0"
futures-util = "0.3.31"
config = "0.15"
serde = "*"
toml = "0.8"
url = "2.5.7"

# --- Command-line Argument Parsing ---
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tiled = { version = "0.14.0", default-features = false }


[features]
# Build with `--features use-wasm-view` if ever embedding to a webview later
use-wasm-view = []
